  - improvement: helpdesk_notification_mail_subject, helpdesk_notification_mail_body
    helpdesk_notification_sms_body, helpdesk_customerinfo_email_body and
    helpdesk_customerinfo_sms_body configurtion variables control additional information
    in helpdesk ticket notice via templates [ravvar/chilan]
  - improvement: userpanel/info: customer properties which have pending value changes
    assigned to them as presented in different color [chilan]

version 1.11.22 (2017-06-08):

  - userpanel enhancement: show confirmed documents only checkbox decides if confirmed
    documents are only shown for customer [chilan]
  - documentview enhancement: allow to view many pdf documents as single pdf file [chilan]
  - userpanel enhancement: module order can be changed from LMS userpanel configuration
    using drag&drop (fixes LMS+ #102) [chilan]
  - improvement - don't show boxes for contact types when no contact
    type is assigned to customer [chilan]
  - enhancement: phpui.disable_active_links_in_nodeinfo controls if some controls
    are active ui elements [chilan]
  - performance improvement: phpui.datatables_max_records limits datatables initialisation
    to tables with specified number of records (default: 300) [chilan]
  - improvement: click on tariff tag should add tag to filter and click on right side
    should move to tariff tag info (should fix LMS+ #101) [chilan]
  - added support for attribution network device for customer [kosa/chilan]
  - enhancement: added support for pro forma invoices (should resolve LMS+ #120) [chilan]
  - enhancement: support of convertion pro forma invoice to invoice [chilan]
  - improvement: splited user name to separated first name and last name components [kyob]
  - enhancement: support of customer number plans with special symbol %C [chilan]
  - enhancement: allow to select first free ip address automatically in node forms
    (phpui.first_reserved_addresses controls how many first addresses are omitted