@@ -2656,6 +2656,10 @@ INSERT INTO uiconfig (section, var, value, description, disabled) VALUES
 ('userpanel', 'show_confirmed_documents_only', 'false', '', 0),
 ('userpanel', 'module_order', '', '', 0),
 ('userpanel', 'visible_ticket_sources', '0;1;2;3;4;5;6;7', '', 0),
+('userpanel', 'change_notification_mail_sender', '', '', 0),
+('userpanel', 'change_notification_mail_recipient', '', '', 0),
+('userpanel', 'change_notification_mail_subject', '', '', 0),
+('userpanel', 'change_notification_mail_body', '', '', 0),
 ('directories', 'userpanel_dir', 'userpanel', '', 0);
 
 INSERT INTO netdeviceproducers (id, name) VALUES
@@ -2985,6 +2989,6 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2017072100');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2017080500');
 
 COMMIT;
